# llm_from_scratch_study

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: train.yaml
configs/data/: dummy_sequence.yaml
configs/experiment/: hello.yaml
configs/logger/: tensorboard.yaml  wandb.yaml
configs/model/: minimal_gpt.yaml  toy_mlp.yaml
configs/trainer/: cpu_debug.yaml
src/llm_lab/: train.py
src/llm_lab/data/: dummy_datamodule.py  dummy_datamodulel.py  dummy_dataset.py
src/llm_lab/lightning/: task.py
src/llm_lab/models/: gpt.py  toy_mlp.py
src/llm_lab/utils/: logging_utils.py  seed.py
test/: test_config.py  test_dataset.py  test_gpt.py  test_model.py
