[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-training-lab"
version = "0.1.0"
description = "Mini LLM training stack from scratch for educational purposes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "lightning>=2.2",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "tensorboard>=2.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.0",
  "pre-commit>=3.7",
]
wandb = [
  "wandb>=0.17",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"